gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37_10302/liba.d
module pkgDIP37_10302.liba;
void foo() {}
